# whitespace-format-rust

./: .gitignore  Cargo.toml  DEVELOPING.md  README.md  whitespace-format.rs
.github/workflows/: build.yaml  release.yaml
src/: change.rs  cli.rs  core.rs  discover.rs  error.rs  exit.rs  main.rs  writer.rs
