[package]
name = "whitespace-format"
version = "0.1.6"
edition = "2021"
authors = ["David Pal <davidko.pal@gmail.com>"]
license = "MIT"
description = "Whitespace formatter and linter for text files and source code files."
readme = "README.md"
homepage = "https://github.com/DavidPal/whitespace-format-rust"
repository = "https://github.com/DavidPal/whitespace-format-rust"
keywords = ["cli", "linter", "formatter"]
categories = ["command-line-utilities"]
include = ["src/", "README.md", "LICENSE"]

[dependencies]
clap = { version = "4.5.23", features = ["derive"] }
colored = { version = "2.1.0" }
regex = { version = "1.11.1" }

[package.metadata.deb]
maintainer = "David Pal <davidko.pal@gmail.com>"
copyright = "2024, David Pal <davidko.pal@gmail.com>"
extended-description = """Whitespace formatter and linter for text files and source code files"""
depends = "$auto"
section = "utility"
priority = "optional"
assets = [
    ["target/release/whitespace-format", "usr/bin/", "755"],
    ["README.md", "usr/share/doc/whitespace-format/", "644"],
    ["LICENSE", "usr/share/doc/whitespace-format/", "644"],
]

[profile.release]
strip = "symbols"
lto = true
codegen-units = 1
